--- a/website/admin/templates/groups.html
+++ b/website/admin/templates/groups.html
@@ -1,4 +1,4 @@
-{% extends "admin/base.html" %}
+{% extends "base.html" %}
 {% block title %}Home Page{% endblock %}
 {% block navigation %}
     <li class="nav-item">
@@ -8,7 +8,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="/groups/" class="nav-link text-dark font-italic">
+        <a href="/groups/" class="nav-link text-dark font-italic bg-light">
             <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>Groups
         </a>
     </li>
@@ -18,7 +18,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="/schedule/" class="nav-link text-dark font-italic bg-light">
+        <a href="/schedule/" class="nav-link text-dark font-italic">
             <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedule
         </a>
     </li>
