--- a/website/admin/templates/home.html
+++ b/website/admin/templates/home.html
@@ -1,14 +1,14 @@
-{% extends "admin/base.html" %}
+{% extends "base.html" %}
 {% block title %}Home Page{% endblock %}
 {% block navigation %}
     <li class="nav-item">
         <!-- bg-light shows the selected -->
-        <a href="/home" class="nav-link text-dark font-italic">
+        <a href="/home" class="nav-link text-dark font-italic bg-light">
             <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Home
         </a>
     </li>
     <li class="nav-item">
-        <a href="/groups/" class="nav-link text-dark font-italic bg-light">
+        <a href="/groups/" class="nav-link text-dark font-italic">
             <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>Groups
         </a>
     </li>
