--- a/website/auth/templates/base.html
+++ b/website/auth/templates/base.html
@@ -1,40 +1,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel='stylesheet' href="{{ url_for('static', filename='styles/style.css') }}">
+        <link rel='stylesheet' href="{{ url_for('auth.static', filename='style.css') }}">
         <title>{% block title %}{% endblock %}</title>
     </head>
-    <script>
-        $(function() {
-            // Sidebar toggle behavior
-            $('#sidebarCollapse').on('click', function() {
-                $('#sidebar, #content').toggleClass('active');
-            });
-        });
-    </script>
 
     <body>
-        <!-- Vertical navbar -->
-        <div class="vertical-nav bg-white" id="sidebar">
-            <div class="py-4 px-3 mb-4 bg-light">
-                <div class="media d-flex align-items-center"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556074849/avatar-1_tcnd60.png" alt="..." width="65" class="mr-3 rounded-circle img-thumbnail shadow-sm">
-                    <div class="media-body">
-                        <h4 class="m-0">Jason Doe</h4>
-                        <p class="font-weight-light text-muted mb-0">Admin</p>
-                    </div>
-                </div>
-            </div>
-
-            <ul class="nav flex-column bg-white mb-0">
-                {% block navigation %}
-                {% endblock %}
-                
-            </ul>
-        </div>
-        <!-- End vertical navbar -->
-
-
-
         <!-- Page content holder -->
         
         <div class="page-content p-5" id="content">
