--- a/website/admin/templates/panelist.html
+++ b/website/admin/templates/panelist.html
@@ -1,4 +1,4 @@
-{% extends "admin/base.html" %}
+{% extends "base.html" %}
 {% block title %}Home Page{% endblock %}
 {% block navigation %}
     <li class="nav-item">
