--- a/website/admin/templates/schedule.html
+++ b/website/admin/templates/schedule.html
@@ -1,9 +1,9 @@
-{% extends "admin/base.html" %}
+{% extends "base.html" %}
 {% block title %}Home Page{% endblock %}
 {% block navigation %}
     <li class="nav-item">
         <!-- bg-light shows the selected -->
-        <a href="/home" class="nav-link text-dark font-italic bg-light">
+        <a href="/home" class="nav-link text-dark font-italic">
             <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Home
         </a>
     </li>
@@ -18,7 +18,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="/schedule/" class="nav-link text-dark font-italic">
+        <a href="/schedule/" class="nav-link text-dark font-italic bg-light">
             <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedule
         </a>
     </li>
