--- a/website/auth/templates/login.html
+++ b/website/auth/templates/login.html
@@ -10,8 +10,10 @@
         {% endif %}
     {% endwith %}
 <form action="#" method="post">
-    <p>Name:</p>
-    <p><input type='text' name='nm' /></p>
+    <p>Username:</p>
+    <p><input type='text' name='username' /></p>
+    <p>Password:</p>
+    <p><input type='password' name='pass' /></p>
     <p><input type='submit' value='submit' /></p>
 </form>
 {% endblock %}
