--- a/website/admin/templates/home.html
+++ b/website/admin/templates/home.html
@@ -24,6 +24,7 @@
     </li>
 {% endblock %}
 {% block content %}
+    <h1>HELLO</h1>
     <!-- <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4">
         <i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle</small>
     </button>
