Working admin login

--- a/website/templates/admin/home.html
+++ b/website/templates/admin/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
 {% block navigation %}
     <li class="nav-item">
@@ -24,7 +24,6 @@
     </li>
 {% endblock %}
 {% block content %}
-    <h1>HELLO</h1>
     <!-- <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4">
         <i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle</small>
     </button>
