--- a/website/templates/admin/panelist.html
+++ b/website/templates/admin/panelist.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
 {% block navigation %}
     <li class="nav-item">
