--- a/website/templates/auth/auth.html
+++ b/website/templates/auth/auth.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel='stylesheet' href="{{ url_for('auth.static', filename='style.css') }}" />
+    <link rel='stylesheet' href="{{ url_for('static', filename='auth/login.css') }}" />
 
     <title>{% block title %}Home{% endblock %}</title>
   </head>
