--- a/website/static/admin/admin.css
+++ b/website/static/admin/admin.css
@@ -85,3 +85,44 @@ body {
 .text-gray {
   color: #aaa;
 }
+
+/*
+*
+* ==========================================
+* OVERLAY
+* ==========================================
+*
+*/
+
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  cursor: pointer;
+}
+
+#text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 20px;
+  color: white;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  background-color: pink;
+  border: 1px;
+  border-color: red;
+  border-style: solid;
+}
+
+
+#close_button {
+  text-align: right;
+}
