--- a/website/templates/admin/groups.html
+++ b/website/templates/admin/groups.html
@@ -32,7 +32,7 @@
             </div>
 
             <div>
-                <form>
+                <form action='#' method='POST'>
                     <label for="groupCode">Group Code:</label>
                     <input type='text' id='groupCode' name='groupcode'><br>
                     <label for="groupName">Group Name:</label>
@@ -49,19 +49,21 @@
                         <option value='bma'>BMA</option>
                     </select>
                     <br>
-                </form>
-                <form name='tablegen'>
-                    <label for="totalProp">Total Proponents:</label>
-                    <input type="number" id="totalProp" name='totalProp' autocomplete='off' pattern='\d*' maxlength="1" onkeydown='return false' min='1' max='9' value="" >
-                    <input type='button' name='generate' value='Create Table' onclick='createTable();'></button>
-                </form>
+                    <form name='tablegen'>
+                        <label for="totalProp">Total Proponents:</label>
+                        <input type="number" id="totalProp" name='totalProp' autocomplete='off' pattern='\d*' maxlength="1" onkeydown='return false' min='1' max='9' value="" >
+                        <input type='button' name='generate' value='Create Table' onclick='createTable();'></button>
+                    </form>
                 <!-- <form name="tablegen">
                     <label>Rows: <input type="text" name="rows" id="rows"/></label><br />
                     <label>Cols: <input type="text" name="cols" id="cols"/></label><br/>
                     <input name="generate" type="button" value="Create Table!" onclick='createTable();'/>
                 </form> -->
 
-                <div id="wrapper"></div>
+                    <div id="wrapper"></div>
+                    <button type='submit' name='submit'>Submit</button>
+                </form>
+                
 
 
                 
@@ -85,11 +87,17 @@
         function createTable() {
             var num_props = document.getElementById('totalProp').value;
             var theader = '<table border="1">\n';
+            
             var tbody = '';
-
+            tbody += '<tr>';
+            tbody += '<th>Last Name</th>';
+            tbody += '<th>First Name</th>';
+            tbody += '<th>Middle Initial</th>';
+            tbody += '</tr>';
+            
             for (var i = 0; i < num_props; i++) {
                 tbody += '<tr>';
-                for (var j = 0; j < 2; j++)
+                for (var j = 0; j < 3; j++)
                 {
                     tbody += '<td>';
                     tbody += "<input type='text'>";
