--- a/website/templates/admin/new_group.html
+++ b/website/templates/admin/new_group.html
@@ -28,52 +28,49 @@
             border-collapse: collapse; padding: 2px 3px; text-align: center;
         }
     </style>
+    
 {% endblock %}
 {% block content %}
-    <div id="overlay" ">
+    <div id="overlay">
         <div id="text">
             
             <div id='close_button' onclick="off()">
-                <img src="{{ url_for('static', filename='close.png') }}">
-            </div>
-
-            <div onload="createTable()">
-                <form method='POST'>
-                    <label for="groupCode">Group Code:</label>
-                    <input type='text' id='groupCode' name='groupCode' value ="{{ current_id }}" disabled><br>
-                    <label for="groupName">Group Name:</label>
-                    <input type='text' id='groupname' name='groupName'><br>
-                    <label for="projectTitle">Project Title:</label>
-                    <input type='text' id='projectTitle' name='projectTitle'><br>
-                    <label for="program">Program:</label>
-                    <select name="program" id='program'>
-                        <option value='agd'>BSIT - AGD</option>
-                        <option value='da'>BSIT - DA</option>
-                        <option value='smba'>BSIT - SMBA</option>
-                        <option value='wma'>BSIT - WMA</option>
-                        <option value='bscs'>BSCS</option>
-                        <option value='bma'>BMA</option>
-                    </select>
-                    <br>
-                    
-                    <label for="totalProp">Total Proponents:</label>
-                    <input type="text" id="totalProp" name='totalProp' autocomplete='off' min='1' max='9' value=0 disabled>
-                    <input type='button' name='generate' value='Add proponent' onclick='addRow();'></button>
-
-                    <div id="cont"></div>
-                    <button type='submit' name='submit' onclick="submit();">Submit</button>
-                </form>
-                
-
-
+                <a href='/groups'>
+                    <img src="{{ url_for('static', filename='close.png') }}">
+                </a>
                 
             </div>
-            
+
+            <div>
+                <label for="groupCode">Group Code:</label>
+                <input type='text' id='groupCode' name='groupCode' value ="{{ current_id }}" disabled><br>
+                <label for="groupName">Group Name:</label>
+                <input type='text' id='groupName' name='groupName'><br>
+                <label for="projectTitle">Project Title:</label>
+                <input type='text' id='projectTitle' name='projectTitle'><br>
+                <label for="program">Program:</label>
+                <select name="program" id='program'>
+                    <option value='agd'>BSIT - AGD</option>
+                    <option value='da'>BSIT - DA</option>
+                    <option value='smba'>BSIT - SMBA</option>
+                    <option value='wma'>BSIT - WMA</option>
+                    <option value='bscs'>BSCS</option>
+                    <option value='bma'>BMA</option>
+                </select>
+                <br>
+                
+                <label for="totalProp">Total Proponents:</label>
+                <input type="text" id="totalProp" name='totalProp' autocomplete='off' min='1' max='9' value=0 disabled>
+                <input type='button' name='generate' value='Add proponent' onclick='addRow();'></button>
+                
+                <div id="cont"></div>
+                <button id='submit' name='submit'>Submit</button>
+            </div>
         </div>
     </div>
     <div style="padding:20px">
         <h2>Overlay with Text</h2>
-        <button onclick="on(); createTable()" >Create New Group</button>
+        <button>Create New Group</button>
     </div>
 
     {% if groups %}
@@ -84,37 +81,25 @@
 
     
     <script>
-        function on() {
-            document.getElementById("overlay").style.display = "block";
-        }
-
-        function off() {
-            document.getElementById("overlay").style.display = "none";
-        }
-
-
-
-
-
-
+        var arrValues = new Array();
         var arrHead = new Array();
+        var dict = {}
         arrHead = ['', 'Last Name', 'First Name', 'Middle Initial']; // table headers.
+        var empTable = document.createElement('table');
+        empTable.setAttribute('id', 'empTable');  // table id.
+        var tr = empTable.insertRow(-1);
 
-        // first create a TABLE structure by adding few headers.
-        function createTable() {
-            var empTable = document.createElement('table');
-            empTable.setAttribute('id', 'empTable');  // table id.
-            var tr = empTable.insertRow(-1);
 
-            for (var h = 0; h < arrHead.length; h++) {
-                var th = document.createElement('th'); // the header object.
-                th.innerHTML = arrHead[h];
-                tr.appendChild(th);
-            }
-
-            var div = document.getElementById('cont');
-            div.appendChild(empTable);    // add table to a container.
+        console.log(dict);
+        for (var h = 0; h < arrHead.length; h++) {
+            var th = document.createElement('th'); // the header object.
+            th.innerHTML = arrHead[h];
+            tr.appendChild(th);
         }
+
+        var div = document.getElementById('cont');
+        div.appendChild(empTable);    // add table to a container.
+        // first create a TABLE structure by adding few headers.
 
         // function to add new row.
         function addRow() {
@@ -168,7 +153,10 @@
         // function to extract and submit table data.
         function submit() {
             var myTab = document.getElementById('empTable');
-            var arrValues = new Array();
+            dict['group_name'] = document.getElementById('groupName').value;
+            dict['project_title'] = document.getElementById('projectTitle').value;
+            dict['program'] = document.getElementById('program').value;
+            
 
             // loop through each row of the table.
             for (row = 1; row < myTab.rows.length - 1; row++) {
@@ -176,13 +164,35 @@
                 for (c = 0; c < myTab.rows[row].cells.length; c++) {
                     var element = myTab.rows.item(row).cells[c];
                     if (element.childNodes[0].getAttribute('type') == 'text') {
-                        arrValues.push("'" + element.childNodes[0].value + "'");
+                        arrValues.push(element.childNodes[0].value);
                     }
                 }
             }
-            
+            dict['proponents'] = arrValues;
             // finally, show the result in the console.
-            console.log(arrValues);
+            return dict;
+            
+            console.log(dict);
         }
+
+        $(document).ready(function () {
+            $("#submit").on("click", function() {
+                var js_data = JSON.stringify(submit());
+                $.ajax({
+                    url: "/new_group/",
+                    type : 'POST',
+                    contentType: 'application/json',
+                    dataType : 'json',
+                    data : js_data
+                }).done(function(result) {
+                    console.log(result);
+                    $("#data").html(result);
+                    console.log('SUCCESS')
+                    window.location.href = "/groups";
+                }).fail(function(jqXHR, textStatus, errorThrown) {
+                    console.log("fail: ",textStatus, errorThrown);
+                });
+            });
+        });
     </script>
 {% endblock %}
