--- a/website/templates/admin/new_group.html
+++ b/website/templates/admin/new_group.html
@@ -84,7 +84,7 @@
         var arrValues = new Array();
         var arrHead = new Array();
         var dict = {}
-        arrHead = ['', 'Last Name', 'First Name', 'Middle Initial']; // table headers.
+        arrHead = ['', 'Student Number', 'Last Name', 'First Name', 'Middle Initial']; // table headers.
         var empTable = document.createElement('table');
         empTable.setAttribute('id', 'empTable');  // table id.
         var tr = empTable.insertRow(-1);
