--- a/website/templates/admin/home.html
+++ b/website/templates/admin/home.html
@@ -4,7 +4,7 @@
     <li class="nav-item">
         <!-- bg-light shows the selected -->
         <a href="/home" class="nav-link text-dark font-italic bg-light">
-            <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Home
+            <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Dashboard
         </a>
     </li>
     <li class="nav-item">
@@ -14,12 +14,17 @@
     </li>
     <li class="nav-item">
         <a href="/panelist/" class="nav-link text-dark font-italic">
-            <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Panelist
+            <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Panelists
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="#" class="nav-link text-dark font-italic">
+            <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Students
         </a>
     </li>
     <li class="nav-item">
         <a href="/schedule/" class="nav-link text-dark font-italic">
-            <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedule
+            <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedules
         </a>
     </li>
 {% endblock %}
