--- a/website/templates/admin/new_group.html
+++ b/website/templates/admin/new_group.html
@@ -4,7 +4,7 @@
     <li class="nav-item">
         <!-- bg-light shows the selected -->
         <a href="/home" class="nav-link text-dark font-italic">
-            <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Home
+            <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Dashboard
         </a>
     </li>
     <li class="nav-item">
@@ -15,6 +15,11 @@
     <li class="nav-item">
         <a href="/panelist/" class="nav-link text-dark font-italic">
             <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Panelist
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="#" class="nav-link text-dark font-italic">
+            <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Students
         </a>
     </li>
     <li class="nav-item">
