--- a/website/templates/admin/schedule.html
+++ b/website/templates/admin/schedule.html
@@ -18,7 +18,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="#" class="nav-link text-dark font-italic">
+        <a href="/student/" class="nav-link text-dark font-italic">
             <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Students
         </a>
     </li>
