--- a/website/templates/admin/student.html
+++ b/website/templates/admin/student.html
@@ -34,7 +34,7 @@
             <p>ID: {{student.stud_no}}</p>
             <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
             <p>Group: {{ student.group_id }}</p>
-            <p>Group Name: {{ student.group.group_name }}</p>
+            <p>Group Name: {{ student.group.name}}</p>
             <br>
         {% endfor %}
     {% endif %}
