--- a/website/templates/auth/login.html
+++ b/website/templates/auth/login.html
@@ -4,7 +4,7 @@
   <form method="POST">
     <h3 align="center">Login</h3>
     <div class="form-group">
-      <label for="email">Email Address</label>
+      <label for="email">Username</label>
       <input
         type="text"
         class="form-control"
