Added create schedule box

--- a/website/templates/admin/new_sched.html
+++ b/website/templates/admin/new_sched.html
@@ -51,23 +51,60 @@
                     <label for="userCode">User Code:</label>
                     <input type='text' id='userCode' name='userCode' value ="{{ current_id }}" disabled><br>
 
-                    <label for="lastName">Last Name</label>
-                    <input type='text' id='lastName' name='lastName'><br>
-
-                    <label for="firstName">First Name</label>
-                    <input type='text' id='firstName' name='firstName'><br>
-
-                    <label for="middleIn">Middle Initial</label>
-                    <input type='text' id='middleIn' name='middleIn'><br>
-
-                    <label for="school">School:</label>
-                    <select name="school" id='school'>
-                        <option value='alabang'>FEU Alabang</option>
-                        <option value='tech'>FEU Tech</option>
-                        <option value='diliman'>FEU Diliman</option>
+                    <label for="group">Group</label>
+                    <select name='group' id='group'>
+                        {% if groups %}
+                            {% for group in groups %}
+                                <option value="{{ group.id }}">{{ group.id }} - {{ group.name}}</option>
+                            {% endfor %}
+                        {% endif %}
                     </select>
                     <br>
 
+                    <label for="selectBox1">Head Panelist</label>
+                    <select name='selectBox1' id='selectBox1'>
+                        <option value='no_value'>-----------</option>
+                        {% if panels %}
+                            {% for panel in panels %}
+                                <option value="option{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
+                            {% endfor %}
+                        {% endif %}
+                    </select>
+                    <br>
+
+                    <label for="selectBox2">Co-Panelist</label>
+                    <select name='selectBox2' id='selectBox2'>
+                        <option value='no_value'>-----------</option>
+                        {% if panels %}
+                            {% for panel in panels %}
+                                <option value="option{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
+                            {% endfor %}
+                        {% endif %}
+                    </select>
+                    <br>
+
+                    <label for="selectBox3">Co-Panelist</label>
+                    <select name='selectBox3' id='selectBox3'>
+                        <option value='no_value'>-----------</option>
+                        {% if panels %}
+                            {% for panel in panels %}
+                                <option value="option{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
+                            {% endfor %}
+                        {% endif %}
+                    </select>
+                    <br>
+
+                    <label for="defense_date">Defense Date:</label>
+                    <input type="date" id="defense_date" name="defense_date" required>
+                    <br>
+
+                    <label for="start_time">Start Time:</label>
+                    <input type="time" id="start_time" name="start_time" min="09:00" max="18:00" required>
+                    <br>
+
+                    <label for="end_time">Start Time:</label>
+                    <input type="time" id="end_time" name="end_time" min="09:00" max="18:00" required>
+                    <br>
                     <button type='submit' id='submit' name='submit'>Submit</button>
                 </form>
                 
@@ -81,19 +118,28 @@
         <button>Create New Panelist</button>
     </div>
 
-    {% if panels %}
+    <!-- {% if panels %}
         {% for panel in panels %}
             <p>ID: {{ panel.id }}</p>
             <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
             <p>School: {{ panel.school }}</p>
             <br>
         {% endfor %}
-    {% endif %}
+    {% endif %} -->
 
     
     <script>
         var arrValues = new Array();
         var arrHead = new Array();
         var dict = {}
+
+        $(document).ready(function(){
+            $('select').on('change', function(event ) {
+                var prevValue = $(this).data('previous');
+            $('select').not(this).find('option[value="'+prevValue+'"]').show();    
+                var value = $(this).val();
+            $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
+            });
+        });
     </script>
 {% endblock %}
