--- a/website/templates/admin/new_sched.html
+++ b/website/templates/admin/new_sched.html
@@ -48,14 +48,14 @@
 
             <div>
                 <form method='POST'>
-                    <label for="userCode">User Code:</label>
+                    <label for="userCode">Defense Code:</label>
                     <input type='text' id='userCode' name='userCode' value ="{{ current_id }}" disabled><br>
 
                     <label for="group">Group</label>
                     <select name='group' id='group'>
                         {% if groups %}
                             {% for group in groups %}
-                                <option value="{{ group.id }}">{{ group.id }} - {{ group.name}}</option>
+                                <option value="group{{ group.id }}">{{ group.id }} - {{ group.name}}</option>
                             {% endfor %}
                         {% endif %}
                     </select>
@@ -66,7 +66,7 @@
                         <option value='no_value'>-----------</option>
                         {% if panels %}
                             {% for panel in panels %}
-                                <option value="option{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
+                                <option value="{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
                             {% endfor %}
                         {% endif %}
                     </select>
@@ -77,7 +77,7 @@
                         <option value='no_value'>-----------</option>
                         {% if panels %}
                             {% for panel in panels %}
-                                <option value="option{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
+                                <option value="{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
                             {% endfor %}
                         {% endif %}
                     </select>
@@ -88,13 +88,13 @@
                         <option value='no_value'>-----------</option>
                         {% if panels %}
                             {% for panel in panels %}
-                                <option value="option{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
+                                <option value="{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
                             {% endfor %}
                         {% endif %}
                     </select>
                     <br>
 
-                    <label for="defense_date">Defense Date:</label>
+                    <!-- <label for="defense_date">Defense Date:</label>
                     <input type="date" id="defense_date" name="defense_date" required>
                     <br>
 
@@ -104,7 +104,7 @@
 
                     <label for="end_time">Start Time:</label>
                     <input type="time" id="end_time" name="end_time" min="09:00" max="18:00" required>
-                    <br>
+                    <br> -->
                     <button type='submit' id='submit' name='submit'>Submit</button>
                 </form>
                 
@@ -118,14 +118,15 @@
         <button>Create New Panelist</button>
     </div>
 
-    <!-- {% if panels %}
-        {% for panel in panels %}
-            <p>ID: {{ panel.id }}</p>
-            <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
-            <p>School: {{ panel.school }}</p>
+    {% if defenses %}
+        {% for defense in defenses %}
+            <p>ID: {{ defense.id }}</p>
+            {% for panel in defense.panels %}
+                <p>{{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
+            {% endfor %}
             <br>
         {% endfor %}
-    {% endif %} -->
+    {% endif %}
 
     
     <script>
