Adding editing function

--- a/website/templates/admin/edit_group.html
+++ b/website/templates/admin/edit_group.html
@@ -47,7 +47,7 @@
             </div>
 
             <div>
-                <p>Adding New Group</p>
+                <p>Editing Group</p>
                 <label for="groupCode">Group Code:</label>
                 <input type='text' id='groupCode' name='groupCode' value ="{{ current_id }}" disabled><br>
                 <label for="groupName">Group Name:</label>
